# uptime

./: .gitignore  CMakeLists.txt  README.md  uptime.c
include/uptime/: uptime.h
src/: uptime.c
test/: test.c  test.cpp
